[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent_of_code_2022"
version = "0.0.1"
authors = [
  { name="David Seres", email="dseres001@gmail.com" },
]
description = "Solutions of the Advent of Code 2022 puzzles"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: https://unlicense.org",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dseres/advent_of_code_2022"
"Bug Tracker" = "https://github.com/dseres/advent_of_code_2022/issues"